test/files/neg/t10763.check
t10763.scala:6: warning: pattern var x in value $anonfun is never used: use a wildcard `_` or suppress this warning with `x@_`
  for (x @ 1 <- List(1.0)) ()
       ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
